[package]
name = "dwebble-rws"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pemfile = "2.2"
webpki-roots = "1.0"
futures-util = "0.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cbindgen = "0.29"

[profile.release]
lto = true
opt-level = 3
